--- a/user_guide/resource_create_sub/secret-create.adoc
+++ b/user_guide/resource_create_sub/secret-create.adoc
@@ -62,7 +62,7 @@ Clicking *[Browse...]* opens the *Open* dialog box where you can select a SSH ke
 
 === Webhook Secret
 
-Create a webhook secret to call a webhook that requests that an application has been run in POST method.
+Create a webhook secret to call a webhook sending that an application has been run with the HTTP POST method.
 
 . Click *[Create Secrets]* in the <<../console_menu_sub/work-load#img-secret-main,Secrets>> main screen.
 . Select **[Form Editor(Webhook)]** from the drop down menu.
